# fast_minimum_variance

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  ruff.toml
.rhiza/: template.yml
benchmarks/: jax_backend.py
book/marimo/notebooks/: fetch_sp500.py  make_markowitz_figures.py  make_minvar_figures.py  minvar.py  run_sp500.py
docs/: api.md
docs/paper/: minvar_paper.md  minvar_paper.tex
paper/: Makefile  fetch_sp500.py  graphs  make_figures.py  make_markowitz_figures.py  make_minvar_figures.py  markowitz_paper.tex  minvar_paper.aux  minvar_paper.bbl  minvar_paper.out  minvar_paper.tex  refs.bib  run_sp500.py  summary.tex
paper/bib/: refs.bib
paper/python/: fetch_sp500.py  make_markowitz_figures.py  make_minvar_figures.py  run_sp500.py
src/fast_minimum_variance/: __init__.py  _base.py  _util.py  active.py  api.py  cvx.py  kkt.py  krylov.py  main.py  minvar_problem.py  problem.py  random.py
tests/: __init__.py  conftest.py  test_active.py  test_api.py  test_base.py  test_cg.py  test_cvx.py  test_factory.py  test_jax.py  test_kkt.py  test_krylov.py  test_main.py  test_minvar_problem.py  test_nnls.py  test_problem.py  test_random.py  test_small.py
