[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fast_minimum_variance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cvxpy>=1.0",
    "numpy>=2.0.0",
    "scipy>=1.0",
]

[dependency-groups]
dev = [
    "marimo>=0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fast_minimum_variance"]

[tool.deptry]
optional_dependencies_dev_groups = ["dev"]

[tool.deptry.package_module_name_map]
numpy = "numpy"
plotly = "plotly"
polars = "polars"
scipy = "scipy"
kaleido = "kaleido"
marimo = "marimo"
cvxpy = "cvxpy"
