[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fast-minimum-variance"
version = "0.3.0"
description = "Constructing minimum variance portfolios"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.0",
]

[project.optional-dependencies]
convex = [
    "cvxpy>=1.0",
]

[dependency-groups]
dev = [
    "marimo>=0.20.0",
    "matplotlib>=3.10.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fast_minimum_variance"]

[tool.deptry]
optional_dependencies_dev_groups = ["dev"]

[tool.deptry.package_module_name_map]
numpy = "numpy"
plotly = "plotly"
polars = "polars"
scipy = "scipy"
kaleido = "kaleido"
marimo = "marimo"
cvxpy = "cvxpy"
