[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fast-minimum-variance"
version = "0.4.0"
description = "Constructing minimum variance portfolios"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.0",
]

[project.optional-dependencies]
convex = [
    "cvxpy>=1.0",
]
jax = [
    "jax>=0.4.34,<0.5; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "jax>=0.4; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "jax-metal>=0.1; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[dependency-groups]
dev = [
    "marimo>=0.20.0",
    "matplotlib>=3.10.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fast_minimum_variance"]

[tool.deptry]
optional_dependencies_dev_groups = ["dev"]

[tool.deptry.package_module_name_map]
numpy = "numpy"
plotly = "plotly"
polars = "polars"
scipy = "scipy"
kaleido = "kaleido"
marimo = "marimo"
cvxpy = "cvxpy"
